@@ -120,7 +120,9 @@ $permissionsTable->addRow([
 			->onClick("return PopUp('popup_right.php?dstfrm=".$userGroupForm->getName().
 				'&permission='.PERM_READ_WRITE."');"),
 		(new CDiv())->addClass(ZBX_STYLE_FORM_INPUT_MARGIN),
-		(new CSubmit('del_read_write', _('Delete selected')))->addClass(ZBX_STYLE_BTN_GREY)
+		(new CSimpleButton(_('Delete selected')))
+			->onClick('javascript: submitFormWithParam("'.$userGroupForm->getName().'", "del_read_write", "1");')
+			->addClass(ZBX_STYLE_BTN_GREY)
 	],
 	[
 		(new CButton('add_read_only', _('Add')))
@@ -128,7 +130,9 @@ $permissionsTable->addRow([
 			->onClick("return PopUp('popup_right.php?dstfrm=".$userGroupForm->getName().
 				'&permission='.PERM_READ."');"),
 		(new CDiv())->addClass(ZBX_STYLE_FORM_INPUT_MARGIN),
-		(new CSubmit('del_read_only', _('Delete selected')))->addClass(ZBX_STYLE_BTN_GREY)
+		(new CSimpleButton(_('Delete selected')))
+			->onClick('javascript: submitFormWithParam("'.$userGroupForm->getName().'", "del_read_only", "1");')
+			->addClass(ZBX_STYLE_BTN_GREY)
 	],
 	[
 		(new CButton('add_deny', _('Add')))
@@ -136,7 +140,9 @@ $permissionsTable->addRow([
 			->onClick("return PopUp('popup_right.php?dstfrm=".$userGroupForm->getName().
 				'&permission='.PERM_DENY."');"),
 		(new CDiv())->addClass(ZBX_STYLE_FORM_INPUT_MARGIN),
-		(new CSubmit('del_deny', _('Delete selected')))->addClass(ZBX_STYLE_BTN_GREY)
+		(new CSimpleButton(_('Delete selected')))
+			->onClick('javascript: submitFormWithParam("'.$userGroupForm->getName().'", "del_deny", "1");')
+			->addClass(ZBX_STYLE_BTN_GREY)
 	]
 ]);
 $permissionsFormList
