@@ -548,3 +548,19 @@ jQuery.fn.trimValues = function(selectors) {
 		obj.val(jQuery.trim(obj.val()));
 	});
 };
+
+/**
+ * Inserts hidden input into a form
+ *
+ * @param string form_name
+ * @param string input_name
+ * @param string input_value
+ */
+function submitFormWithParam(form_name, input_name, input_value) {
+	var input = document.createElement('input');
+	input.setAttribute('type', 'hidden');
+	input.setAttribute('name', input_name);
+	input.setAttribute('value', input_value);
+	document.forms[form_name].appendChild(input);
+	document.forms[form_name].submit();
+}
